ingress.yml
---
# k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-app-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mon-app.local
      http:
        paths:
          - path:     /
            pathType: Prefix
            backend:
              service:
                name: mon-app-service
                port:
                  number: 80
